# graphmind

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  ROADMAP.md  SECURITY.md  docker-compose.gpu.yml  docker-compose.prod.yml  docker-compose.secrets.yml  docker-compose.yml  pyproject.toml
.claude/sdd/features/: BUILD_REPORT_SECURITY_HARDENING_AUDIT.md  DEFINE_SECURITY_HARDENING_AUDIT.md  DESIGN_SECURITY_HARDENING_AUDIT.md
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml
config/: settings.yaml
config/environments/: dev.yaml  production.yaml  staging.yaml
config/prompts/: evaluator.yaml  planner.yaml  synthesizer.yaml
docs/: BUILD_REPORT.md  architecture.md  contributing.md  deployment.md  getting-started.md  ingestion.md  querying.md  running.md  testing.md
docs/adrs/: 001-multi-provider-llm-routing.md  002-hybrid-retrieval-with-rrf.md  003-langgraph-agentic-rag.md  004-mcp-server-integration.md  005-crewai-dual-engine.md  006-structured-logging.md  007-async-job-queue.md  008-multi-tenancy.md  009-secret-management.md  010-rate-limiting.md
docs/operations/: incident-playbook.md  restore.md  runbook.md
eval/: benchmark_dataset.jsonl
k8s/: configmap.yaml  deployment-worker.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  networkpolicy.yaml  pdb.yaml  secret.yaml  service.yaml  serviceaccount.yaml
k8s/overlays/dev/: kustomization.yaml
k8s/overlays/prod/: kustomization.yaml
k8s/overlays/staging/: kustomization.yaml
migrations/: 001_initial_schema.cypher  001_initial_schema.down.cypher
scripts/: backup.sh
src/graphmind/: __init__.py  config.py  dependencies.py  errors.py  features.py  llm_router.py  schemas.py
src/graphmind/agents/: __init__.py  evaluator.py  orchestrator.py  planner.py  retriever_agent.py  states.py  synthesizer.py
src/graphmind/api/: __init__.py  main.py
src/graphmind/api/routes/: __init__.py  documents.py  graph.py  health.py  ingest.py  metrics.py  query.py
src/graphmind/crew/: __init__.py  agents.py  crew.py  tasks.py  tools.py
src/graphmind/dashboard/: __init__.py  app.py
src/graphmind/evaluation/: __init__.py  benchmark.py  deepeval_suite.py  eval_models.py  ragas_eval.py
src/graphmind/experiments/: registry.py
src/graphmind/ingestion/: __init__.py  chunker.py  dedup.py  loaders.py  pipeline.py
src/graphmind/knowledge/: __init__.py  entity_extractor.py  graph_builder.py  graph_schema.cypher  relation_extractor.py
src/graphmind/mcp/: __init__.py  server.py
src/graphmind/memory/: conversation.py
src/graphmind/observability/: __init__.py  audit.py  cost_tracker.py  langfuse_client.py  logging_config.py  metrics.py  otel.py
src/graphmind/prompts/: registry.py
src/graphmind/retrieval/: __init__.py  embedder.py  graph_retriever.py  hybrid_retriever.py  response_cache.py  vector_retriever.py
src/graphmind/safety/: __init__.py  config.py  config.yml  guardrails.py  injection_detector.py  rails.co
src/graphmind/security/: __init__.py  auth.py  rbac.py  ssrf.py
src/graphmind/testing/: chaos.py
src/graphmind/webhooks/: dispatcher.py
src/graphmind/workers/: __init__.py  ingest_worker.py
tests/: conftest.py
tests/adversarial/: conftest.py  test_adversarial.py
tests/integration/: conftest.py  test_api_integration.py  test_eval_suite.py  test_ingestion_pipeline.py  test_pipeline_integration.py
tests/load/: locustfile.py
tests/unit/: test_agents.py  test_audit.py  test_auth_middleware.py  test_budget_alerts.py  test_chunker.py  test_circuit_breaker.py  test_config.py  test_conversation_memory.py  test_cost_tracker.py  test_crew.py  test_dedup.py  test_deepeval_suite.py  test_errors.py  test_features.py  test_hybrid_retriever.py  test_injection_detector.py  test_loaders.py  test_mcp_security.py  test_metrics.py  test_rbac.py  test_response_cache.py  test_schemas.py  test_security_routes.py  test_ssrf.py
