[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graphmind"
version = "0.2.0"
description = "Autonomous Knowledge Agent Platform - Agentic RAG with Knowledge Graphs, hybrid retrieval, and MCP server"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Arthur Maia Graf" }]
keywords = ["ai", "rag", "knowledge-graph", "langgraph", "crewai", "mcp", "agents"]

dependencies = [
    "fastapi>=0.115.0,<1.0",
    "uvicorn[standard]>=0.32.0,<1.0",
    "pydantic>=2.10.0,<3.0",
    "pydantic-settings>=2.7.0,<3.0",
    "pyyaml>=6.0,<7.0",
    "structlog>=24.4.0,<26.0",
    "httpx>=0.28.0,<1.0",
    # LLM providers — upper bounds prevent pip resolution-too-deep
    "langchain-core>=0.3.0,<2.0",
    "langchain-groq>=0.2.0,<2.0",
    "langchain-google-genai>=2.0.0,<5.0",
    "langchain-community>=0.3.0,<1.0",
    "langgraph>=0.2.0,<2.0",
    "crewai>=0.86.0,<2.0",
    "instructor>=1.7.0,<2.0",
    # Vector + Graph
    "qdrant-client>=1.12.0,<2.0",
    "neo4j>=5.26.0,<7.0",
    "langchain-neo4j>=0.2.0,<1.0",
    # Embeddings
    "ollama>=0.4.0,<1.0",
    # Document processing
    "unstructured[pdf,md]>=0.16.0,<1.0",
    "pymupdf>=1.25.0,<2.0",
    # Observability
    "langfuse>=2.56.0,<4.0",
    "opentelemetry-api>=1.28.0,<2.0",
    "opentelemetry-sdk>=1.28.0,<2.0",
    "opentelemetry-exporter-otlp>=1.28.0,<2.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "opentelemetry-instrumentation-httpx>=0.49b0",
    "prometheus-client>=0.21.0,<1.0",
    # Safety
    "nemoguardrails>=0.11.0,<1.0",
    # MCP
    "mcp>=1.2.0,<2.0",
    # Dashboard
    "streamlit>=1.41.0,<2.0",
    # Job queue
    "arq>=0.26.0,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-PyYAML>=6.0",
    "pre-commit>=4.0.0",
    "pip-audit>=2.7.0",
    "schemathesis>=3.36.0",
    "testcontainers>=4.0.0",
    "locust>=2.31.0",
    "litellm>=1.55.0",
]
eval = [
    "deepeval>=2.0.0",
    "ragas>=0.2.0",
    "litellm>=1.55.0",
    "datasets>=3.2.0",
]

[project.scripts]
graphmind = "graphmind.api.main:run"
graphmind-mcp = "graphmind.mcp.server:main"
graphmind-ingest = "graphmind.ingestion.pipeline:cli"
graphmind-eval = "graphmind.evaluation.benchmark:cli"
graphmind-dashboard = "graphmind.dashboard.app:main"
graphmind-worker = "graphmind.workers.ingest_worker:cli"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: requires Docker services running",
    "eval: evaluation benchmarks (slow)",
    "adversarial: adversarial security tests",
    "load: load testing (slow)",
]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = false
warn_return_any = false

[[tool.mypy.overrides]]
module = [
    "graphmind.dashboard.*",
    "graphmind.evaluation.*",
    "graphmind.mcp.*",
    "graphmind.workers.*",
    "graphmind.safety.config",
]
ignore_errors = true

[tool.coverage.run]
source = ["graphmind"]
omit = [
    "*/cli*",
    "*/__main__*",
    "*/dashboard/*",
    "*/mcp/*",
    "*/api/*",
    "*/workers/*",
    "*/ingestion/*",
    "*/evaluation/*",
    "*/knowledge/*",
    "*/webhooks/*",
    "*/testing/*",
    "*/experiments/*",
    "*/prompts/registry.py",
    "*/dependencies.py",
    "*/crew/crew.py",
    "*/observability/langfuse_client.py",
    "*/observability/logging_config.py",
    "*/observability/otel.py",
    "*/safety/guardrails.py",
    "*/safety/config.py",
]

[tool.coverage.report]
fail_under = 70
show_missing = true

[tool.hatch.build.targets.wheel]
packages = ["src/graphmind"]
